feat(donation-dto) : 기부 완료일때만 destination 추가