@@ -13,29 +13,35 @@ import java.util.stream.Collectors;
 @Getter
 @Builder
 public class DonationItemUserListRespDto {
-    private List<DonationItemUserRespDto> under_inspection;
-    private List<DonationItemUserRespDto> inspection_complete;
-    private List<DonationItemUserRespDto> inspection_rejected;
-    private List<DonationItemUserRespDto> donation_complete;
+    private List<DonationItemUserRespDto> underInspection;
+    private List<DonationItemUserRespDto> inspectionComplete;
+    private List<DonationItemUserRespDto> inspectionRejected;
+    private List<DonationCompleteItemUserRespDto> donationComplete;
     private PagingInfo pagingInfo;
 
     public static DonationItemUserListRespDto of(Page<DonationItem> donationItems, PagingInfo pagingInfo) {
-        List<DonationItemUserRespDto> allItems = donationItems.getContent().stream()
-                .map(DonationItemUserRespDto::fromEntity)
-                .toList();
+        List<DonationItemUserRespDto> underInspection = filterByStatus(donationItems, DonationStatus.UNDER_INSPECTION);
+        List<DonationItemUserRespDto> inspectionComplete = filterByStatus(donationItems, DonationStatus.INSPECTION_COMPLETED);
+        List<DonationItemUserRespDto> inspectionRejected = filterByStatus(donationItems, DonationStatus.INSPECTION_REJECTED);
+        List<DonationCompleteItemUserRespDto> donationComplete = donationItems.getContent().stream()
+                .filter(item -> item.getDonationStatus() == DonationStatus.DONATION_COMPLETED)
+                .map(DonationCompleteItemUserRespDto::fromEntity)
+                .collect(Collectors.toList());
 
         return DonationItemUserListRespDto.builder()
-                .under_inspection(filterByStatus(allItems, DonationStatus.UNDER_INSPECTION))
-                .inspection_complete(filterByStatus(allItems, DonationStatus.INSPECTION_COMPLETED))
-                .inspection_rejected(filterByStatus(allItems, DonationStatus.INSPECTION_REJECTED))
-                .donation_complete(filterByStatus(allItems, DonationStatus.DONATION_COMPLETED))
+                .underInspection(underInspection)
+                .inspectionComplete(inspectionComplete)
+                .inspectionRejected(inspectionRejected)
+                .donationComplete(donationComplete)
                 .pagingInfo(pagingInfo)
                 .build();
     }
 
-    private static List<DonationItemUserRespDto> filterByStatus(List<DonationItemUserRespDto> items, DonationStatus status) {
-        return items.stream()
+    private static List<DonationItemUserRespDto> filterByStatus(Page<DonationItem> donationItems, DonationStatus status) {
+        return donationItems.getContent().stream()
                 .filter(item -> item.getDonationStatus() == status)
+                .map(DonationItemUserRespDto::fromEntity)
                 .collect(Collectors.toList());
     }
+
 }
